<resources>
    <string name="app_name">Queue Breaker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Login</string>
    <string name="get_started">Get Started</string>
    <string name="scan">Scan</string>
    <string name="order">Order</string>
    <string name="pay">Pay</string>
    <string name="feedback">Feedback</string>
    <string name="userId">Username</string>
    <string name="password">Passowrord</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="login_failed">Login Failed</string>
    <string name="no_internet">No Internet</string>
    <string name="getStarted">Get Started</string>
    <string name="validUserIdErrMsg">Please enter a valid username</string>
    <string name="validPasswordErrMsg">Please enter a valid password</string>
    <string name="signing_up">Signing Up…</string>
    <string name="please_wait">Please Wait</string>
    <string name="password_has_been_reset_and_sent_to_your_registered_mail_id">password_has_been_reset_and_sent_to_your_registered_mail_id</string>
    <string name="please_contact_your_admin_to_reset_the_password">please_contact_your_admin_to_reset_the_password</string>
    <string name="you_have_not_updated_your_mail_id_or_your_mail_id_is_invalid">you_have_not_updated_your_mail_id_or_your_mail_id_is_invalid</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="or">Or</string>
    <string name="signup">Signup</string>
    <string name="Rs">\u20B9</string>
    <string name="no_restaurants_found">No Restaurants Found</string>
    <string name="action_settings">Settings</string>
    <string name="scanner_fragment">Scanner Fragment</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="google_login">Google Login</string>
    <string name="twitter_login">Twitter Login</string>
    <string name="email_login">Email Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="auth_dialog">Auth Dialog</string>
    <string name="logging_in">Logging in…</string>
    <string name="camera_permission_justification_msg">To Scan QR Code, Camera permission is required!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="qr_code_auto_scan_notification">Test</string>
    <string name="facebook_app_id">771401579732120</string>
    <string name="fb_login_protocol_scheme">fb771401579732120</string>
    <string name="logout">Logout</string>
    <string name="twitter_consumer_key">0fqqqGjmYVcS930gl0N5vGXIG</string>
    <string name="twitter_consumer_secret">I6x6K1KXlInl2psdZfSrAgztXFxSEZG4ARp2tvfd7N6w75SuZG</string>
    <string name="invalid_email_id">Invalid Email ID</string>
    <string name="password_strength_message">Use at least 6 letters and with one capital letter, a numeric digit and a special character</string>
    <string name="login_cancelled">Login Cancelled</string>
    <string name="please_check_your_email_and_try_again">Please check your email and try again</string>
    <string name="password_reset_cancllled">Password reset cancelled</string>
    <string name="mail_sent">Mail sent</string>
    <string name="no_menu_found">No Menu Found</string>
    <string name="title_activity_add_menu">AddMenuActivity</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="title_activity_menu_kotlin">MenuKotlinActivity</string>
    <string name="add_category">Add Category</string>
    <string name="modify_categories">Modify Categories</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="please_enter_a_valid_name">Please enter a valid name</string>
    <string name="added">Added</string>
    <string name="please_try_again">Please try again</string>
    <string name="adding">Adding…</string>
    <string name="removing">Removing …</string>
    <string name="removed">Removed</string>
    <string name="one_category_removed">One Category Removed</string>
    <string name="undo">UNDO</string>
    <string name="saving">Saving …</string>
    <string name="edit_dishes">Edit Dishes</string>
    <string name="edit_dishes_list">Edit Dishes List</string>
    <string name="please_enter_a_valid_price">Please enter a valid price</string>
    <string name="add">Add</string>
    <string name="cancel">cancel</string>
    <string name="cart">Cart</string>
    <string name="show_edit_dialog">show_edit_dialog</string>
    <string name="orders">Orders</string>
    <string name="place_order">Place Order</string>
    <string name="order_list_is_empty">Your cart is empty…</string>
    <string name="dish_list_is_empty">No Dishes</string>
    <string name="order_placed">Order Placed</string>
    <string name="uploading">Uploading...</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="phone_number">Phone No.</string>
    <string name="verificationCode">Verification Code</string>
    <string name="send">Send</string>
    <string name="request_verification_code">Request Verification code</string>
    <string name="please_enter_a_valid_phone_num">Please enter a valid phone number</string>
    <string name="send_verification_code">Verify</string>
    <string name="please_enter_a_valid_code">Please enter a valid code</string>
</resources>