<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".auth.admin.AdminAuthActivity">

        <com.thnki.queuebreaker.utils.SquareImageView
            android:id="@+id/brandImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@mipmap/restaurant"
            app:placeholderImage="@mipmap/restaurant" />

        <TextView
            android:id="@+id/brandName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/phoneNo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/rounded_corner_text_input"
            android:hint="@string/phone_number"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/verificationCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/rounded_corner_text_input"
            android:hint="@string/verificationCode"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:textColor="@color/colorPrimary"
            android:visibility="gone" />

        <Button
            android:id="@+id/requestVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/rounded_corner_ripple_button"
            android:text="@string/request_verification_code"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/sendVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/rounded_corner_ripple_button"
            android:text="@string/send_verification_code"
            android:textColor="@color/white"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>
</FrameLayout>