<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.thnki.queuebreaker.utils.SquareImageView
                android:id="@+id/editDishImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:placeholderImage="@mipmap/restaurant" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/editPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:backgroundTint="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/baseline_camera_alt_24"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="@id/editDishImage"
                app:layout_constraintEnd_toEndOf="@id/editDishImage"
                app:layout_constraintStart_toStartOf="@id/editDishImage" />

            <EditText
                android:id="@+id/dishName"
                style="@style/AppTheme.addMenuItem"
                android:hint="@string/name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editDishImage" />

            <EditText
                android:id="@+id/dishDescription"
                style="@style/AppTheme.addMenuItem"
                android:hint="@string/description"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dishName" />

            <EditText
                android:id="@+id/dishPrice"
                style="@style/AppTheme.addMenuItem"
                android:hint="@string/price"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dishDescription" />

            <Button
                android:id="@+id/cancelAdd"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/saveDish"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dishPrice" />

            <Button
                android:id="@+id/saveDish"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancelAdd"
                app:layout_constraintTop_toBottomOf="@id/dishPrice" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</FrameLayout>
