<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#99ffffff"
    android:minWidth="300dp">

    <RelativeLayout
        android:id="@+id/loginCredentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/credentialContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:id="@+id/facebook_login"
                        android:src="@mipmap/facebook" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:id="@+id/google_login"
                        android:src="@mipmap/google_plus" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:id="@+id/twitter_login"
                        android:src="@mipmap/twitter" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/or"
                    android:textColor="@color/colorAccent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent" />

            </LinearLayout>

            <EditText
                android:id="@+id/userId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:maxLines="1"
                android:background="@drawable/rounded_corner_text_input"
                android:hint="@string/userId"
                android:inputType="text"
                android:padding="10dp"
                android:imeOptions="actionNext"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner_text_input"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:padding="10dp"
                android:imeOptions="actionDone"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/credentialContainer"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/signup"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgotPassword"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/passwordResetErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />
</RelativeLayout>